assets/css/main.css
body {
    font-family: Verdana, sans-serif;
    margin: auto;
    padding: 20px;
    max-width: 84ch;
    text-align: left;
    background-color: #fff;
    line-height: 1.5;
    color: #444;
}
header {
    margin: 0 0 2em;
}
footer {
    padding: 25px;
    text-align: center;
}
h1,
h2,
h3,
h4,
h5,
h6,
strong,
b {
    color: #222;
}
a {
    text-decoration: none;
    color: #2654a3;
}
a.active {
    font-weight: bolder;
    text-decoration: underline;
}
.site-title {
    font-size: 2em;
    font-weight: bold;
    margin: 0.67em 0;
}
.site-title a {
    color: #000;
}
.main-nav {
    display: flex;
    justify-content: space-between;
    align-items: center;
}
nav a {
    margin-right: 10px;
}
textarea {
    width: 100%;
    font-size: 16px;
}
input {
    font-size: 16px;
}
table {
    width: 100%;
}
img {
    max-width: 100%;
    height: auto;
}
code {
    padding: 2px 5px;
    background-color: #f2f2f2;
}
pre {
    padding: 1rem;
}
pre > code {
    all: unset;
}
blockquote {
    border: 1px solid #999;
    color: #222;
    padding: 2px 0 2px 20px;
    margin: 0;
    font-style: italic;
}

.profile {
    display: flex;
    align-items: center;
}

.profile-icon {
    border-radius: 50%;
    margin-right: 1rem;
    margin-bottom: 0;
    width: 48px;
}

.profile-name p {
    margin: 0.5rem 0 0.5rem 0;
    font-size: 1.5em;
    font-weight: bold;
    color: #222;
}

.profile-body p {
    margin: 0.5rem 0 0.5rem 0;
}

.social-icons {
    display: flex;
    padding-left: 0;
    align-items: center;
    list-style-type: none;
}

.social-icons li + li {
    margin-left: 1rem;
}

.highlight {
  padding: 1rem;
  border-radius: 4px;
  margin: 1rem 0;
  overflow-x: auto;
}

.highlight pre {
    margin: 0;
    font-family: 'Courier New', Courier, monospace;
    font-size: 0.875rem;
    line-height: 1.5;
}

.other-lang {
  margin-right: 0
}

nav a[aria-current="page"] {
  text-decoration: underline;
  font-weight: bold;
}

.current-lang[aria-current="true"] {
  font-weight: bold;
}

.language-switcher {
  display: inline-block;
}

a:focus-visible {
  outline: 2px solid #000;
  outline-offset: 2px;
}

time {
  font-weight: normal;
}

.skip-link {
  position: absolute;
  top: -100%;
  left: 0;
  padding: 0.5rem 1rem;
  background-color: #2654a3;
  color: #fff;
  z-index: 100;
}

.skip-link:focus-visible {
  top: 0;
  color: #fff;
}

